--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-tsparticles": "^2.12.2",
     "sweetalert2": "^11.7.28",
+    "tsparticles": "^2.12.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
