--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-scripts": "5.0.1",
     "react-tsparticles": "^2.12.2",
     "sweetalert2": "^11.7.28",
